# vanga

./: CMakeLists.txt  environment.sh
RPM/: build.sh
gears/: CMakeLists.txt  configure  configure.ac  default.config.t
gears/src/: CMakeLists.txt
gears/src/Gears/: CMakeLists.txt
gears/src/Gears/Basic/: .BufAllocator.hpp.swp  Algs.hpp  Allocator.hpp  Allocator.tpp  AppUtils.cpp  AppUtils.hpp  ArrayAutoPtr.hpp  AtomicCounter.hpp  AtomicRefCountable.hpp  BoolFunctors.hpp  BufAllocator.cpp  BufAllocator.hpp  CMakeLists.txt  CRC.cpp  CRC.hpp  DirSelector.hpp  Errno.hpp  Exception.hpp  FileManip.hpp  Hash.hpp  ISAAC.hpp  InputMemoryStream.hpp  InputMemoryStream.tpp  IntervalMap.hpp  IntervalSet.hpp  IntrusivePtr.hpp  Lock.cpp  Lock.hpp  MT19937.hpp  Macro.hpp  MemBuf.cpp  MemBuf.hpp  Optional.hpp  OutputMemoryStream.hpp  OutputMemoryStream.tpp  Rand.cpp  Rand.hpp  RefCountable.hpp  Singleton.cpp  Singleton.hpp  (+10 more)
gears/src/Gears/Logging/: CMakeLists.txt  LogHelper.cpp  LogHelper.hpp  Logger.cpp  Logger.hpp  StreamLogger.cpp  StreamLogger.hpp
gears/src/Gears/Plain/: Base.hpp  Buffer.hpp  CMakeLists.txt  ConstVector.hpp  List.hpp  String.hpp  Vector.hpp
gears/src/Gears/Plain/Code/: CMakeLists.txt  Declarator.cpp  Declarator.hpp  Element.cpp  Element.hpp  IncludeElement.hpp  NamespaceElement.hpp  Tracer.hpp  TypeDefElement.hpp  TypeElement.hpp
gears/src/Gears/Plain/Compiler/: CMakeLists.txt  CppCompiler.cpp
gears/src/Gears/Plain/Cpp/: CMakeLists.txt  Config.hpp  DescriptorGenerator.cpp  DescriptorGenerator.hpp  Generator.cpp  Generator.hpp  ReaderGenerator.cpp  ReaderGenerator.hpp  Utils.hpp  WriterGenerator.cpp  WriterGenerator.hpp
gears/src/Gears/Plain/Declaration/: BaseDescriptor.cpp  BaseDescriptor.hpp  BaseReader.cpp  BaseReader.hpp  BaseTemplate.cpp  BaseTemplate.hpp  BaseType.cpp  BaseType.hpp  BaseWriter.cpp  BaseWriter.hpp  CMakeLists.txt  CompleteTemplateDescriptor.cpp  CompleteTemplateDescriptor.hpp  ListTemplate.cpp  ListTemplate.hpp  Namespace.cpp  Namespace.hpp  SimpleDescriptor.hpp  SimpleReader.hpp  SimpleType.hpp  SimpleWriter.hpp  StructDescriptor.hpp  StructReader.hpp  StructWriter.hpp  Utils.hpp
gears/src/Gears/Plain/Parsing/: CMakeLists.txt  Parser.cpp  Parser.hpp  Processor.cpp  Processor.hpp  YYParser.yy  YYParserAdapter.hpp  YYScanner.hpp  YYScanner.ll
gears/src/Gears/ProfileStorage/: BaseLevel.hpp  CMakeLists.txt  DelegateProfileMap.hpp  FileController.cpp  FileController.hpp  FileLevel.hpp  FileLevel.tpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  KeySerializer.hpp  LevelProfileMap.hpp  LevelProfileMap.tpp  LoadingProgressCallback.cpp  LoadingProgressCallback.hpp  LoadingProgressCallbackBase.cpp  LoadingProgressCallbackBase.hpp  MergeIterator.hpp  ProfileMap.hpp  RWMemLevel.hpp  RWMemLevel.tpp  RandomAccessFile.cpp  RandomAccessFile.hpp  ReadMemLevel.hpp  ReadMemLevel.tpp  TransactionMap.hpp  TransactionProfileMap.hpp
gears/src/Gears/String/: AsciiStringManip.cpp  AsciiStringManip.hpp  CMakeLists.txt  Csv.cpp  Csv.hpp  Gason.cpp  Gason.hpp  Tokenizer.hpp
gears/src/Gears/Threading/: ActiveObject.cpp  ActiveObject.hpp  ActiveObjectCallback.hpp  ActiveObjectCommonImpl.cpp  ActiveObjectCommonImpl.hpp  CMakeLists.txt  CompositeActiveObject.cpp  CompositeActiveObject.hpp  Condition.cpp  Condition.hpp  Scheduler.cpp  Scheduler.hpp  Semaphore.cpp  Semaphore.hpp  TAlloc.hpp  TaskRunner.cpp  TaskRunner.hpp  ThreadKey.hpp  ThreadRunner.cpp  ThreadRunner.hpp  ThreadValue.hpp  ThreadValue.tpp
gears/tests/: CMakeLists.txt  Test.post.rules
gears/tests/UnitTests/: CMakeLists.txt  IntervalTest.cpp
vanga/: CMakeLists.txt  configure  configure.ac  default.config.t
vanga/RPM/SPECS/: abt  vanga.spec
vanga/rules/: Plain.post.rules.in
vanga/src/: CMakeLists.txt
vanga/src/DTree/: ActAbsLossMetricEvaluator.hpp  ActDiscrepancyMetricEvaluator.hpp  ActExpectedValueMetricEvaluator.hpp  Algs.hpp  CMakeLists.txt  DTree.cpp  DTree.hpp  DTree.tpp  EvalMetricPrinter.hpp  FastFeatureSet.hpp  FunDiscrepancy.hpp  FunLogLoss.hpp  FunOptimization.hpp  FunSum.hpp  Gain.hpp  LBFGS.hpp  LBFGS.tpp  Label.hpp  LogRegPredictor.hpp  LogRegPredictor.tpp  Metric.hpp  MetricPrinter.hpp  PredAbsLossMetricEvaluator.hpp  PredBuffer.hpp  PredExpectedValueMetricEvaluator.hpp  Predictor.cpp  Predictor.hpp  Predictor.tpp  PredictorSet.hpp  PredictorSet.tpp  RSquareMetricEvaluator.hpp  SVM.cpp  SVM.hpp  SVM.tpp  TreeLearner.hpp  TreeLearner.tpp  Utils.cpp  Utils.hpp  VecUtils.hpp
vanga/src/DTree/Metrics/: FunSquareDiviationLoss.hpp  LogLossMetricEvaluator.hpp  SquareDiviationMetricEvaluator.hpp
vanga/src/DTreeTrainer/: Application.cpp  Application.hpp  CMakeLists.txt
vanga/tests/: CMakeLists.txt
vanga/tests/DTreeUtilsTest/: CMakeLists.txt  DTreeUtilsTest.cpp
vanga/utils/: CMakeLists.txt
vanga/utils/SVMGenerator/: Application.cpp  Application.hpp  CMakeLists.txt  HashCalculator.hpp
vanga/utils/SVMUtil/: Application.cpp  Application.cpp.orig  Application.hpp  Application.hpp.orig  CMakeLists.txt
vanga/utils/Scripts/: Args.pm  CsvFilter.pl  VangaPredict.py  XGBoostImportance.py  XGBoostModelDump.py  XGBoostModelVis.py  XGBoostPredict.py  XGBoostTrain.py  build_rpm.sh
vanga/utils/Scripts/CsvUtils/: Utils.pm
vanga/utils/Scripts/CsvUtils/Input/: Find.pm  Std.pm
vanga/utils/Scripts/CsvUtils/Output/: Distrib.pm  LibSVM.pm  Std.pm
vanga/utils/Scripts/CsvUtils/Process/: AbsLoss.pm  AddIndex.pm  Array.pm  CRC.pm  ColumnDistribution.pm  Columns.pm  ColumnsAvg.pm  ColumnsDispersion.pm  ColumnsLogLoss.pm  Concat.pm  DateToTimestamp.pm  DateToTimestamp.pm.orig  DeepTreeLearn.pm  Dispersion.pm  DispersionProp.pm  Domain.pm  DumpColumns.pm  EQ.pm  FloatGroup.pm  FloatReplaceByFile.pm  GE.pm  GetTopPred.pm  Group.pm  InFile.pm  KeywordExtract.pm  LE.pm  LabelGroup.pm  Log.pm  LogLoss.pm  MergeByKey.pm  MergeByRows.pm  NE.pm  NotInFile.pm  NumFilter.pm  NumNormalize.pm  PrevRow.pm  QuadLoss.pm  RETransform.pm  ReplaceByFile.pm  StrictTreeLearn.pm  (+4 more)
vanga/utils/SegmentUtil/: Application.cpp  Application.hpp  CMakeLists.txt  SegmentProfile.pst
(+49 files in other folders)
