AC_INIT([configure.ac])

m4_include([OpenSBE.ac])

OSBE_ENABLE_FEATURE([CmdDep])

OSBE_ENABLE_FEATURE([CXX/CXX])
OSBE_ENABLE_FEATURE([CXX/Ar])
OSBE_ENABLE_FEATURE([CXX/So])
OSBE_ENABLE_FEATURE([CXX/Inl])
OSBE_ENABLE_FEATURE([CXX/Ex])
OSBE_ENABLE_FEATURE([CXX/Def])
OSBE_ENABLE_FEATURE([CXX/AutoDep])

CPPFLAGS="$CPPFLAGS -D_LARGEFILE64_SOURCE"

#AC_CONFIG_FILES([rules/Plain.post.rules])

m4_include([dir.ac])

OSBE_OUTPUT
